update GC settings in cassandra.bat patch by Nate McCall; reviewed by Vladimir Loncar for CASSANDRA-1636
git-svn-id: https://svn.apache.org/repos/asf/cassandra/branches/cassandra-0.6@1025650 13f79535-47bb-0310-9956-ffa450edef68